initial commit from latest updates

--- a/otka/bv2bids_ch5.ipynb
+++ b/otka/bv2bids_ch5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "fif_dir = '/Users/yeganeh/Documents/Raw Files/PLB_HYP_OTKA/fif_files'\n",
     "\n",
     "subject_ids = ['214911', '214911relaxation', '214911embedded', '214911confusion', '214911posthypnotic',\n",
-    "'2133014', '2133014_relaxation' '2133014_wightnoise_posthyp', '2133014_poathynosis']\n",
+    "'2133014', '2133014_relaxation', '2133014_wightnoise_posthyp', '2133014_poathynosis']\n",
     "\n",
     "markers_code = {'baseline_1':334.0,\n",
     "'intro_control':108.0, 'intro_hypnosis':103.0,\n",
@@ -36,12 +36,185 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Apart from looking for the eye movemnt in EEG recording, another way to have a more exact estimation of the start of inductions would be measuring the average time that it took for participants to read through the procedure introductions from 'time_procedure', ' time_Hs' and 'time_cs' variables in their behavioral data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "###################################################### subject 51 #######################################################"
+    "###################################################### subject 51 #######################################################\n",
+    "bids_id = '51'\n",
+    "raw_list = list()\n",
+    "bids_list = list()\n",
+    "\n",
+    "iterators = range(5)\n",
+    "runs = [0, 3, 4, 7, 8]\n",
+    "run_map = dict(zip(iterators, runs))\n",
+    "\n",
+    "for sub_id in [subject_ids[5], subject_ids[6], subject_ids[7], subject_ids[8]]:\n",
+    "    fname = op.join(data_dir,f'{sub_id}.vhdr')\n",
+    "    raw = mne.io.read_raw_brainvision(fname, eog=('EOG1', 'EOG2'), misc= ['ECG'])\n",
+    "    raw.set_channel_types({'ECG':'ecg'})\n",
+    "    raw.info['line_freq'] = 50  # specify power line frequency\n",
+    "\n",
+    "    ########################### create bids list for basline1, induction1 & experience1\n",
+    "    if sub_id == '2133014':\n",
+    "        tmin_index = raw.annotations.description.tolist().index('Stimulus/S  2')\n",
+    "\n",
+    "        for iterator in iterators:\n",
+    "\n",
+    "            #crop\n",
+    "            tmin = raw.annotations.onset[tmin_index + run_map[iterator]]\n",
+    "            tmax = raw.annotations.onset[tmin_index + run_map[iterator] + 1]\n",
+    "            if run_map[iterator] in [0,18]:\n",
+    "                description = f'baseline{int(iterator/9+1)}'\n",
+    "            elif run_map[iterator] % 2:\n",
+    "                description = f'induction{int((run_map[iterator] - 3)/4 + 1)}'\n",
+    "            else:\n",
+    "                description = f'experience{int(run_map[iterator]/4)}'\n",
+    "\n",
+    "            raw_segment = raw.copy().crop(tmin=tmin, tmax=tmax)\n",
+    "\n",
+    "            #define annotations\n",
+    "            onset = raw_segment.annotations.onset\n",
+    "            new_annot = mne.Annotations(onset=[0],\n",
+    "                                    duration=[onset[1]-onset[0]],\n",
+    "                                    description=[description])\n",
+    "                \n",
+    "            raw_segment.set_annotations(new_annot)\n",
+    "            \n",
+    "            #save \n",
+    "            fname_new = op.join(fif_dir, f'{subject_ids[5]}-{description}-raw.fif')\n",
+    "            raw_segment.save(fname_new)\n",
+    "            raw_segment = mne.io.read_raw_fif(fname_new)\n",
+    "\n",
+    "            #creat lists\n",
+    "            raw_list.append(raw_segment)\n",
+    "            bids_path = BIDSPath(subject=bids_id,\n",
+    "                                session='01',\n",
+    "                                task= description,\n",
+    "                                root=bids_root)\n",
+    "            bids_list.append(bids_path)\n",
+    "\n",
+    "    ##################################### Add bids lists for induction3 and experience3   \n",
+    "    elif sub_id == '2133014_relaxation':\n",
+    "        # inspecting from the EEG recording the start of the confusion induction, when participants instructed to close his eyes, was 202 s:\n",
+    "        ########## induction3\n",
+    "        description = 'induction3'\n",
+    "        tmin_ind = 202\n",
+    "        tmax_ind = 202 + markers_code['relaxation']\n",
+    "        raw_segment = raw.copy().crop(tmin=tmin_ind, tmax=tmax_ind)\n",
+    "\n",
+    "        #save \n",
+    "        fname_new = op.join(fif_dir, f'{subject_ids[5]}-{description}-raw.fif')\n",
+    "        raw_segment.save(fname_new)\n",
+    "        raw_segment = mne.io.read_raw_fif(fname_new)\n",
+    "\n",
+    "        #creat lists\n",
+    "        raw_list.append(raw_segment)\n",
+    "        bids_path = BIDSPath(subject=bids_id,\n",
+    "                            session='01',\n",
+    "                            task= description,\n",
+    "                            root=bids_root)\n",
+    "        bids_list.append(bids_path)\n",
+    "\n",
+    "        ########## experience3\n",
+    "        description = 'experience3'\n",
+    "        tmin_exp = tmax_ind + 1\n",
+    "        tmax_exp = tmin_exp + markers_code['experience']\n",
+    "        raw_segment = raw.copy().crop(tmin=tmin_exp, tmax=tmax_exp)\n",
+    "\n",
+    "        #save \n",
+    "        fname_new = op.join(fif_dir, f'{subject_ids[5]}-{description}-raw.fif')\n",
+    "        raw_segment.save(fname_new)\n",
+    "        raw_segment = mne.io.read_raw_fif(fname_new)\n",
+    "\n",
+    "        #creat lists\n",
+    "        raw_list.append(raw_segment)\n",
+    "        bids_path = BIDSPath(subject=bids_id,\n",
+    "                            session='01',\n",
+    "                            task= description,\n",
+    "                            root=bids_root)\n",
+    "        bids_list.append(bids_path)\n",
+    "    \n",
+    "    elif sub_id == '2133014_wightnoise_posthyp':\n",
+    "        ######### baseline2\n",
+    "        description = 'induction4'\n",
+    "        tmin_ind = 234\n",
+    "        tmax_ind = 234 + markers_code['whitenoise']\n",
+    "        raw_segment = raw.copy().crop(tmin=tmin_ind, tmax=tmax_ind)\n",
+    "\n",
+    "        #save \n",
+    "        fname_new = op.join(fif_dir, f'{subject_ids[5]}-{description}-raw.fif')\n",
+    "        raw_segment.save(fname_new)\n",
+    "        raw_segment = mne.io.read_raw_fif(fname_new)\n",
+    "\n",
+    "        #creat lists\n",
+    "        raw_list.append(raw_segment)\n",
+    "        bids_path = BIDSPath(subject=bids_id,\n",
+    "                            session='01',\n",
+    "                            task= description,\n",
+    "                            root=bids_root)\n",
+    "        bids_list.append(bids_path)\n",
+    "    \n",
+    "        ########## experience3\n",
+    "        description = 'experience4'\n",
+    "        tmin_exp = tmax_ind + 1\n",
+    "        tmax_exp = tmin_exp + markers_code['experience']\n",
+    "        raw_segment = raw.copy().crop(tmin=tmin_exp, tmax=tmax_exp)\n",
+    "\n",
+    "        #save \n",
+    "        fname_new = op.join(fif_dir, f'{subject_ids[5]}-{description}-raw.fif')\n",
+    "        raw_segment.save(fname_new)\n",
+    "        raw_segment = mne.io.read_raw_fif(fname_new)\n",
+    "\n",
+    "        #creat lists\n",
+    "        raw_list.append(raw_segment)\n",
+    "        bids_path = BIDSPath(subject=bids_id,\n",
+    "                            session='01',\n",
+    "                            task= description,\n",
+    "                            root=bids_root)\n",
+    "        bids_list.append(bids_path)\n",
+    "    \n",
+    "    else:\n",
+    "        ######### baseline2\n",
+    "        description = 'baseline2'\n",
+    "        tmin_base = 68\n",
+    "        tmax_base = 368 #from inspecting the recording\n",
+    "        raw_segment = raw.copy().crop(tmin=tmin_base, tmax=tmax_base)\n",
+    "\n",
+    "        #save \n",
+    "        fname_new = op.join(fif_dir, f'{subject_ids[5]}-{description}-raw.fif')\n",
+    "        raw_segment.save(fname_new)\n",
+    "        raw_segment = mne.io.read_raw_fif(fname_new)\n",
+    "\n",
+    "        #creat lists\n",
+    "        raw_list.append(raw_segment)\n",
+    "        bids_path = BIDSPath(subject=bids_id,\n",
+    "                            session='01',\n",
+    "                            task= description,\n",
+    "                            root=bids_root)\n",
+    "        bids_list.append(bids_path)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# create bids from lists\n",
+    "for raw, bids_path in zip(raw_list, bids_list):\n",
+    "    write_raw_bids(raw, bids_path, overwrite=True)\n",
+    "\n",
+    "\n",
+    "# mark bad channels\n",
+    "for bids_path in bids_list:\n",
+    "    if 'induction3' in bids_path.basename or 'experience3' in bids_path.basename:\n",
+    "        mark_bad_channels(ch_names=['FC1','FC2','Fp2'], bids_path=bids_path, verbose=False, overwrite=True)\n",
+    "    else:\n",
+    "        mark_bad_channels(ch_names=['FC1','FC2'], bids_path=bids_path, verbose=False, overwrite=True)"
    ]
   },
   {
@@ -55,8 +228,8 @@
     "raw_list = list()\n",
     "bids_list = list()\n",
     "\n",
-    "iterators = range(4)\n",
-    "runs = [0, 3, 4, 7]\n",
+    "iterators = range(3)\n",
+    "runs = [0, 3, 4]\n",
     "run_map = dict(zip(iterators, runs))\n",
     "\n",
     "for sub_id in [subject_ids[0], subject_ids[3], subject_ids[4]]:\n",
@@ -67,7 +240,6 @@
     "\n",
     "    ########################### create bids list for basline1, induction1 & experience1\n",
     "    if sub_id == '214911':\n",
-    "        tmin_index = raw.annotations.description.tolist().index('Stimulus/S  2')\n",
     "        onset = raw.annotations.onset\n",
     "        desc = raw.annotations.description\n",
     "        duration = raw.annotations.duration\n",
@@ -89,7 +261,7 @@
     "        new_desc = np.insert(desc, 3, 'Stimulus/S  2')\n",
     "        new_annot = mne.Annotations(onset = new_onset, duration = new_duration, description  = new_desc)\n",
     "        raw.set_annotations(new_annot)\n",
-    "\n",
+    "        tmin_index = raw.annotations.description.tolist().index('Stimulus/S  2')\n",
     "\n",
     "        for iterator in iterators:\n",
     "\n",
@@ -103,7 +275,9 @@
     "            else:\n",
     "                description = f'experience{int(run_map[iterator]/4)}'\n",
     "\n",
-    "            #define a more meaningfull annotations\n",
+    "            raw_segment = raw.copy().crop(tmin=tmin, tmax=tmax)\n",
+    "\n",
+    "            #define annotations\n",
     "            onset = raw_segment.annotations.onset\n",
     "            new_annot = mne.Annotations(onset=[0],\n",
     "                                    duration=[onset[1]-onset[0]],\n",
@@ -148,8 +322,9 @@
     "\n",
     "        ########## experience4\n",
     "        description = 'experience4'\n",
-    "        tmin_exp = 4\n",
-    "        tmax_exp = 316 #from inspecting the recording\n",
+    "        tmin_exp = tmax_ind + 1\n",
+    "        tmax_exp = tmin_exp + markers_code['experience']\n",
+    "        raw_segment = raw.copy().crop(tmin=tmin_exp, tmax=tmax_exp)\n",
     "\n",
     "        #save \n",
     "        fname_new = op.join(fif_dir, f'{subject_ids[0]}-{description}-raw.fif')\n",
@@ -167,8 +342,9 @@
     "    else:\n",
     "        ######### baseline2\n",
     "        description = 'baseline2'\n",
-    "        tmin_base = []\n",
-    "        tmax_base = tmin_base + markers_code['baseline_2']\n",
+    "        tmin_base = 4\n",
+    "        tmax_base = 304 #from inspecting the recording\n",
+    "        raw_segment = raw.copy().crop(tmin=tmin_base, tmax=tmax_base)\n",
     "\n",
     "        #save \n",
     "        fname_new = op.join(fif_dir, f'{subject_ids[0]}-{description}-raw.fif')\n",
@@ -185,13 +361,13 @@
     "\n",
     "\n",
     "\n",
+    "\n",
     "# create bids from lists\n",
     "for raw, bids_path in zip(raw_list, bids_list):\n",
     "    write_raw_bids(raw, bids_path, overwrite=True)\n",
     "\n",
-    "\n",
-    "\n",
-    "######### marking bad channels in bids file"
+    "# mark bad channels\n",
+    "mark_bad_channels(ch_names=['PO4'], bids_path=bids_path[-1], verbose=False, overwrite=True)"
    ]
   }
  ],
