inital commit from latest backups

--- a/otka/bv2bids_ch5.ipynb
+++ b/otka/bv2bids_ch5.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This notebook converts subject 51 and 52's EEG files to bids format (subject with OS crash)\n",
+    "# This notebook converts subject 51 and 52's EEG files to bids format (subjects with OS crash)\n",
     "\n",
     "# Setup\n",
     "import numpy as np\n",
@@ -111,6 +111,13 @@
     "        tmax_ind = 202 + markers_code['relaxation']\n",
     "        raw_segment = raw.copy().crop(tmin=tmin_ind, tmax=tmax_ind)\n",
     "\n",
+    "        #define annotations\n",
+    "        new_annot = mne.Annotations(onset=[0],\n",
+    "                                duration=[tmax_ind - tmin_ind],\n",
+    "                                description=[description])\n",
+    "            \n",
+    "        raw_segment.set_annotations(new_annot)\n",
+    "\n",
     "        #save \n",
     "        fname_new = op.join(fif_dir, f'{subject_ids[5]}-{description}-raw.fif')\n",
     "        raw_segment.save(fname_new)\n",
@@ -130,6 +137,14 @@
     "        tmax_exp = tmin_exp + markers_code['experience']\n",
     "        raw_segment = raw.copy().crop(tmin=tmin_exp, tmax=tmax_exp)\n",
     "\n",
+    "        #define annotations\n",
+    "        onset = raw_segment.annotations.onset\n",
+    "        new_annot = mne.Annotations(onset=[0],\n",
+    "                                duration=[tmax_exp - tmin_exp],\n",
+    "                                description=[description])\n",
+    "            \n",
+    "        raw_segment.set_annotations(new_annot)\n",
+    "\n",
     "        #save \n",
     "        fname_new = op.join(fif_dir, f'{subject_ids[5]}-{description}-raw.fif')\n",
     "        raw_segment.save(fname_new)\n",
@@ -144,11 +159,19 @@
     "        bids_list.append(bids_path)\n",
     "    \n",
     "    elif sub_id == '2133014_wightnoise_posthyp':\n",
-    "        ######### baseline2\n",
+    "        ######### induction4\n",
     "        description = 'induction4'\n",
     "        tmin_ind = 234\n",
     "        tmax_ind = 234 + markers_code['whitenoise']\n",
     "        raw_segment = raw.copy().crop(tmin=tmin_ind, tmax=tmax_ind)\n",
+    "\n",
+    "        #define annotations\n",
+    "        onset = raw_segment.annotations.onset\n",
+    "        new_annot = mne.Annotations(onset=[0],\n",
+    "                                duration=[tmax_ind - tmin_ind],\n",
+    "                                description=[description])\n",
+    "            \n",
+    "        raw_segment.set_annotations(new_annot)\n",
     "\n",
     "        #save \n",
     "        fname_new = op.join(fif_dir, f'{subject_ids[5]}-{description}-raw.fif')\n",
@@ -163,11 +186,20 @@
     "                            root=bids_root)\n",
     "        bids_list.append(bids_path)\n",
     "    \n",
-    "        ########## experience3\n",
+    "        ########## experience4\n",
     "        description = 'experience4'\n",
     "        tmin_exp = tmax_ind + 1\n",
     "        tmax_exp = tmin_exp + markers_code['experience']\n",
     "        raw_segment = raw.copy().crop(tmin=tmin_exp, tmax=tmax_exp)\n",
+    "\n",
+    "\n",
+    "        #define annotations\n",
+    "        onset = raw_segment.annotations.onset\n",
+    "        new_annot = mne.Annotations(onset=[0],\n",
+    "                                duration=[tmax_exp - tmin_exp],\n",
+    "                                description=[description])\n",
+    "            \n",
+    "        raw_segment.set_annotations(new_annot)\n",
     "\n",
     "        #save \n",
     "        fname_new = op.join(fif_dir, f'{subject_ids[5]}-{description}-raw.fif')\n",
@@ -188,6 +220,15 @@
     "        tmin_base = 68\n",
     "        tmax_base = 368 #from inspecting the recording\n",
     "        raw_segment = raw.copy().crop(tmin=tmin_base, tmax=tmax_base)\n",
+    "\n",
+    "\n",
+    "        #define annotations\n",
+    "        onset = raw_segment.annotations.onset\n",
+    "        new_annot = mne.Annotations(onset=[0],\n",
+    "                                duration=[tmax_base - tmin_base],\n",
+    "                                description=[description])\n",
+    "            \n",
+    "        raw_segment.set_annotations(new_annot)\n",
     "\n",
     "        #save \n",
     "        fname_new = op.join(fif_dir, f'{subject_ids[5]}-{description}-raw.fif')\n",
@@ -307,6 +348,15 @@
     "        description = 'induction4'\n",
     "        raw_segment = raw.copy().crop(tmin=tmin_ind, tmax=tmax_ind)\n",
     "\n",
+    "\n",
+    "        #define annotations\n",
+    "        onset = raw_segment.annotations.onset\n",
+    "        new_annot = mne.Annotations(onset=[0],\n",
+    "                                duration=[tmax_ind - tmin_ind],\n",
+    "                                description=[description])\n",
+    "            \n",
+    "        raw_segment.set_annotations(new_annot)\n",
+    "\n",
     "        #save \n",
     "        fname_new = op.join(fif_dir, f'{subject_ids[0]}-{description}-raw.fif')\n",
     "        raw_segment.save(fname_new)\n",
@@ -325,6 +375,14 @@
     "        tmin_exp = tmax_ind + 1\n",
     "        tmax_exp = tmin_exp + markers_code['experience']\n",
     "        raw_segment = raw.copy().crop(tmin=tmin_exp, tmax=tmax_exp)\n",
+    "\n",
+    "        #define annotations\n",
+    "        onset = raw_segment.annotations.onset\n",
+    "        new_annot = mne.Annotations(onset=[0],\n",
+    "                                duration=[tmax_exp - tmin_exp],\n",
+    "                                description=[description])\n",
+    "            \n",
+    "        raw_segment.set_annotations(new_annot)\n",
     "\n",
     "        #save \n",
     "        fname_new = op.join(fif_dir, f'{subject_ids[0]}-{description}-raw.fif')\n",
@@ -345,6 +403,14 @@
     "        tmin_base = 4\n",
     "        tmax_base = 304 #from inspecting the recording\n",
     "        raw_segment = raw.copy().crop(tmin=tmin_base, tmax=tmax_base)\n",
+    "\n",
+    "        #define annotations\n",
+    "        onset = raw_segment.annotations.onset\n",
+    "        new_annot = mne.Annotations(onset=[0],\n",
+    "                                duration=[tmax_base - tmin_base],\n",
+    "                                description=[description])\n",
+    "            \n",
+    "        raw_segment.set_annotations(new_annot)\n",
     "\n",
     "        #save \n",
     "        fname_new = op.join(fif_dir, f'{subject_ids[0]}-{description}-raw.fif')\n",
@@ -367,7 +433,42 @@
     "    write_raw_bids(raw, bids_path, overwrite=True)\n",
     "\n",
     "# mark bad channels\n",
-    "mark_bad_channels(ch_names=['PO4'], bids_path=bids_path[-1], verbose=False, overwrite=True)"
+    "mark_bad_channels(ch_names=['PO4'], bids_path=bids_list[-1], verbose=False, overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting parameters from /Users/yeganeh/Codes/otka-preprocessing/data/Main-study/sub-51/ses-01/eeg/sub-51_ses-01_task-experience2_eeg.vhdr...\n",
+      "Setting channel info structure...\n",
+      "Reading events from /Users/yeganeh/Codes/otka-preprocessing/data/Main-study/sub-51/ses-01/eeg/sub-51_ses-01_task-experience2_events.tsv.\n",
+      "Reading channel info from /Users/yeganeh/Codes/otka-preprocessing/data/Main-study/sub-51/ses-01/eeg/sub-51_ses-01_task-experience2_channels.tsv.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['experience2'], dtype='<U11')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bids_path = BIDSPath(subject='51',\n",
+    "                    session='01',\n",
+    "                    task= 'experience2',\n",
+    "                    root=bids_root)\n",
+    "raw = read_raw_bids(bids_path)\n",
+    "raw.annotations.description"
    ]
   }
  ],
