add utility function (task index finder) + cleanups

--- a/notebooks/create_xarray.ipynb
+++ b/notebooks/create_xarray.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setup\n",
+    "#### imports\n",
     "import xarray as xr\n",
     "import mne\n",
     "import pandas as pd\n",
@@ -17,7 +17,36 @@
     "from autoreject import AutoReject\n",
     "from autoreject import get_rejection_threshold\n",
     "\n",
-    "## cut noisy parts\n",
+    "#### open documnets and retreive essential information\n",
+    "# find hypnosis-introduced-as-hypnosis trials\n",
+    "# open long formatted behavioral data \n",
+    "data = pd.read_excel('docs/data_with_psds.xlsx', header=1, index_col='Unnamed: 0')\n",
+    "# get the index of the condition where hypnosis introduced as real hypnosis\n",
+    "truehypnosis_ind = [(i+1) - 4*int(i/4)\n",
+    "                    for i in range(len(data))\n",
+    "                    if (data.iloc[i]['description_type'] == 'hypnosis' and data.iloc[i]['trial_type'] == True)]\n",
+    "truehypnosis_series = pd.Series(truehypnosis_ind,index=data.index.drop_duplicates(), name='true_hyp_ind')\n",
+    "# remove two participants with software crash\n",
+    "truehypnosis_series = truehypnosis_series.iloc[:50]\n",
+    "\n",
+    "# open ids map to match the behavioral with bids ids\n",
+    "ids_map = pd.read_excel('docs/ids_map.xlsx', header=1, index_col='behavioral_id').bids_id\n",
+    "# remove the two participants with software crash in ids map\n",
+    "ids_map = ids_map.loc[:2132614].drop_duplicates()\n",
+    "# change index type and merge to series\n",
+    "ids_map.index = ids_map.index.astype('int64')\n",
+    "realHypInd = pd.concat([ids_map,truehypnosis_series],axis=1)\n",
+    "# set bids ids as index and get the experience trial index based on the subject id\n",
+    "realHypInd.set_index('bids_id', inplace=True)\n",
+    "del truehypnosis_ind; del truehypnosis_series; del ids_map\n",
+    "\n",
+    "#### utilitty functions\n",
+    "# real hypnosis index finder\n",
+    "def task_ind_finder(sub):\n",
+    "    exp_ind = realHypInd.loc[int(sub), 'true_hyp_ind']\n",
+    "    return exp_ind\n",
+    "\n",
+    "# cut noisy parts\n",
     "def cut_noisy(raw, task, language):\n",
     "    \"\"\"\n",
     "    First step of preprocessing in my pipeline!\n",
@@ -62,56 +91,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ids_map = ids_map.loc[:2132614].drop_duplicates()\n",
-    "a = pd.read_excel('docs/ids_map.xlsx', header=1, index_col='behavioral_id').bids_id\n",
-    "a.index = a.index.astype('int64')\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# open long formatted behavioral data \n",
-    "data = pd.read_excel('docs/data_with_psds.xlsx', header=1, index_col='Unnamed: 0')\n",
-    "# get the index of the condition where hypnosis introduced as real hypnosis\n",
-    "truehypnosis_ind = [(i+1) - 4*int(i/4)\n",
-    "                    for i in range(len(data))\n",
-    "                    if (data.iloc[i]['description_type'] == 'hypnosis' and data.iloc[i]['trial_type'] == True)]\n",
-    "truehypnosis_series = pd.Series(truehypnosis_ind,index=data.index.drop_duplicates())\n",
-    "# remove two participants with software crash\n",
-    "truehypnosis_series = truehypnosis_series.iloc[:50]\n",
-    "\n",
-    "# open ids map (shold match the behavioral with bids ids)\n",
-    "ids_map = pd.read_excel('docs/ids_map.xlsx', header=1, index_col='behavioral_id').bids_id\n",
-    "# remove participants with software crash\n",
-    "ids_map = ids_map.loc[:2132614].drop_duplicates()\n",
-    "# change the"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
     "## create dataset from data of two tasks of two persons\n",
     "bids_root = Path('data/Main-study')\n",
     "subjects = ['01', '02']\n",
-    "tasks = ['baseline1', 'experience1']\n",
+    "tasks = ['baseline1', 'experience']\n",
     "allSubjectsTasks = {}\n",
     "\n",
     "for task in tasks:\n",
     "\n",
     "    # timpoints and initialize\n",
-    "    timepoints = 30001\n",
+    "    timepoints = 30001 # change this if resampling data\n",
     "    allSubjects = np.empty((1,61, timepoints))\n",
     "\n",
     "    # Open data of a specific task for all subjects one by one, reshape and append them\n",
     "    for sub in subjects:\n",
+    "        # find hypnosis-as-hypnosis trial index (only for experience)\n",
+    "        if task == 'experience':\n",
+    "            ind = task_ind_finder(sub); task = task + str(ind)\n",
     "        bids_path = mne_bids.BIDSPath(subject=sub, session='01', task=task, root=bids_root)\n",
     "        raw = mne_bids.read_raw_bids(bids_path, verbose=False)\n",
     "        # Cut noisy parts only for experience and baseline task\n",
