add coordinates to dataset

--- a/notebooks/create_xarray.ipynb
+++ b/notebooks/create_xarray.ipynb
@@ -19,25 +19,33 @@
     "\n",
     "#### open documnets and retreive essential information\n",
     "# find hypnosis-introduced-as-hypnosis trials\n",
+    "\n",
     "# open long formatted behavioral data \n",
     "data = pd.read_excel('docs/data_with_psds.xlsx', header=1, index_col='Unnamed: 0')\n",
+    "\n",
     "# get the index of the condition where hypnosis introduced as real hypnosis\n",
     "truehypnosis_ind = [(i+1) - 4*int(i/4)\n",
     "                    for i in range(len(data))\n",
     "                    if (data.iloc[i]['description_type'] == 'hypnosis' and data.iloc[i]['trial_type'] == True)]\n",
     "truehypnosis_series = pd.Series(truehypnosis_ind,index=data.index.drop_duplicates(), name='true_hyp_ind')\n",
+    "\n",
     "# remove two participants with software crash\n",
     "truehypnosis_series = truehypnosis_series.iloc[:50]\n",
     "\n",
     "# open ids map to match the behavioral with bids ids\n",
     "ids_map = pd.read_excel('docs/ids_map.xlsx', header=1, index_col='behavioral_id').bids_id\n",
+    "\n",
     "# remove the two participants with software crash in ids map\n",
     "ids_map = ids_map.loc[:2132614].drop_duplicates()\n",
+    "\n",
     "# change index type and merge to series\n",
     "ids_map.index = ids_map.index.astype('int64')\n",
     "realHypInd = pd.concat([ids_map,truehypnosis_series],axis=1)\n",
+    "\n",
     "# set bids ids as index and get the experience trial index based on the subject id\n",
     "realHypInd.set_index('bids_id', inplace=True)\n",
+    "\n",
+    "# delete junks\n",
     "del truehypnosis_ind; del truehypnosis_series; del ids_map\n",
     "\n",
     "#### utilitty functions\n",
@@ -132,19 +140,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "# creating xarray from the dict\n",
     "baseline = allSubjectsTasks['baseline1']\n",
     "experience = allSubjectsTasks['experience1']\n",
+    "subjects = subjects\n",
+    "ch_names = raw.ch_names\n",
+    "_, times = raw.get_data(return_times=True)\n",
     "\n",
     "dataset = xr.Dataset(\n",
     "    {\n",
     "        \"baseline\": ([\"subject\", \"electrodes\", \"time\"], baseline),\n",
     "        \"experience\": ([\"subject\", \"electrodes\", \"time\"], experience)\n",
+    "    },\n",
+    "    coords={\n",
+    "        \"subjects\": ([\"subject\"], subjects),\n",
+    "        \"ch_names\": ([\"electrodes\"], ch_names),\n",
+    "        \"times\": ([\"time\"], times)\n",
     "    }\n",
+    "\n",
     ")\n",
     "\n",
     "# save and check the size (if it was ok we will use all data)\n",
