utility function (bad channel matcher)

--- a/notebooks/create_xarray.ipynb
+++ b/notebooks/create_xarray.ipynb
@@ -32,13 +32,18 @@
     "# remove two participants with software crash\n",
     "truehypnosis_series = truehypnosis_series.iloc[:50]\n",
     "\n",
-    "# open ids map to match the behavioral with bids ids\n",
-    "ids_map = pd.read_excel('docs/ids_map.xlsx', header=1, index_col='behavioral_id').bids_id\n",
+    "# open ids map and take bids ids out (to match the behavioral with bids ids)\n",
+    "ids_map = pd.read_excel('docs/ids_map.xlsx', header=1, index_col='behavioral_id')\n",
+    "bids_ids = ids_map.bids_id\n",
+    "\n",
+    "# we will need mapping between bad channels and bids ids later in preprocessing; let's put this aside!\n",
+    "bad_channels = ids_map[['bad_channels','bids_ids']]\n",
+    "bad_channels.set_index('bids_ids', inplace=True)\n",
     "\n",
     "# remove the two participants with software crash in ids map\n",
     "ids_map = ids_map.loc[:2132614].drop_duplicates()\n",
     "\n",
-    "# change index type and merge to series\n",
+    "# change index type and merge two series\n",
     "ids_map.index = ids_map.index.astype('int64')\n",
     "realHypInd = pd.concat([ids_map,truehypnosis_series],axis=1)\n",
     "\n",
@@ -46,13 +51,22 @@
     "realHypInd.set_index('bids_id', inplace=True)\n",
     "\n",
     "# delete junks\n",
-    "del truehypnosis_ind; del truehypnosis_series; del ids_map\n",
+    "del truehypnosis_ind; del truehypnosis_series; del bids_ids; del ids_map\n",
     "\n",
     "#### utilitty functions\n",
     "# real hypnosis index finder\n",
     "def task_ind_finder(sub):\n",
     "    exp_ind = realHypInd.loc[int(sub), 'true_hyp_ind']\n",
     "    return exp_ind\n",
+    "\n",
+    "# bad channel finder\n",
+    "def bad_channel_matcher(sub):\n",
+    "    \"\"\"\n",
+    "    find the name of channels marked as bad for each subject\n",
+    "    \"\"\"\n",
+    "    bads = bad_channels.loc[int(sub), 'bad_channels']\n",
+    "    return bads\n",
+    "\n",
     "\n",
     "# cut noisy parts\n",
     "def cut_noisy(raw, task, language):\n",
