before forced push

--- a/notebooks/quality_assessment.ipynb
+++ b/notebooks/quality_assessment.ipynb
@@ -38,6 +38,7 @@
     "from scipy.stats import median_abs_deviation\n",
     "\n",
     "\n",
+    "\n",
     "# utility function transalted from Vislab's MATLAB code to python\n",
     "def dispersion_with_mean(matrix):\n",
     "    \"\"\"\n",
@@ -88,7 +89,17 @@
     "    \n",
     "    return raw\n",
     "\n",
-    "def make_amplitude_matrix():\n",
+    "def make_amplitude_matrix(ampVectors):\n",
+    "    \"\"\"\n",
+    "    ampVectors : list of np.array\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    amplitude_matrix = [\n",
+    "        np.append(np.zeros(ampVectors[0].shape), ampVectors[i])\n",
+    "        for i in range(len(ampVectors))\n",
+    "    ]\n",
+    "    amplitude_matrix = np.delete(amplitude_matrix, 0, axis=0)\n",
+    "    return amplitude_matrix\n",
     "    "
    ]
   },
