--- a/notebooks/time_frequency_analysis.ipynb
+++ b/notebooks/time_frequency_analysis.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "# Time-frequency analysis\n",
     "This notebook re-analyzes and extracts power from the \n",
-    "resting state???"
+    "resting state???\n",
+    "\n",
+    "- which method to use: Hilbert-filter, complex morlet wavelet convolution, Short-time FFT (Welch), Multitapers\n",
+    "- If we use Welch method what is the size of the fft window? should we have zero paddings? should we have overlap? what to do for the edge artefacts?\n",
+    "- Normalization: which method to use? Z transform, percentage change or decibels? which part of the recording should be used as the baseline? which baseline window is the best?"
    ]
   },
   {
