--- a/notebooks/create_xarray.ipynb
+++ b/notebooks/create_xarray.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,15 +37,15 @@
     "bids_ids = ids_map.bids_id\n",
     "\n",
     "# we will need mapping between bad channels and bids ids later in preprocessing; let's put this aside!\n",
-    "bad_channels = ids_map[['bad_channels','bids_ids']]\n",
-    "bad_channels.set_index('bids_ids', inplace=True)\n",
+    "bad_channels = ids_map[['bad_channels','bids_id']]\n",
+    "bad_channels.set_index('bids_id', inplace=True)\n",
     "\n",
     "# remove the two participants with software crash in ids map\n",
-    "ids_map = ids_map.loc[:2132614].drop_duplicates()\n",
+    "bids_ids = bids_ids.loc[:2132614].drop_duplicates()\n",
     "\n",
     "# change index type and merge two series\n",
-    "ids_map.index = ids_map.index.astype('int64')\n",
-    "realHypInd = pd.concat([ids_map,truehypnosis_series],axis=1)\n",
+    "bids_ids.index = bids_ids.index.astype('int64')\n",
+    "realHypInd = pd.concat([bids_ids,truehypnosis_series],axis=1)\n",
     "\n",
     "# set bids ids as index and get the experience trial index based on the subject id\n",
     "realHypInd.set_index('bids_id', inplace=True)\n",
@@ -109,9 +109,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting parameters from data/Main-study/sub-01/ses-01/eeg/sub-01_ses-01_task-baseline1_eeg.vhdr...\n",
+      "Setting channel info structure...\n",
+      "Reading events from data/Main-study/sub-01/ses-01/eeg/sub-01_ses-01_task-baseline1_events.tsv.\n",
+      "Reading channel info from data/Main-study/sub-01/ses-01/eeg/sub-01_ses-01_task-baseline1_channels.tsv.\n",
+      "Extracting parameters from data/Main-study/sub-02/ses-01/eeg/sub-02_ses-01_task-baseline1_eeg.vhdr...\n",
+      "Setting channel info structure...\n",
+      "Reading events from data/Main-study/sub-02/ses-01/eeg/sub-02_ses-01_task-baseline1_events.tsv.\n",
+      "Reading channel info from data/Main-study/sub-02/ses-01/eeg/sub-02_ses-01_task-baseline1_channels.tsv.\n",
+      "Extracting parameters from data/Main-study/sub-01/ses-01/eeg/sub-01_ses-01_task-experience3_eeg.vhdr...\n",
+      "Setting channel info structure...\n",
+      "Reading events from data/Main-study/sub-01/ses-01/eeg/sub-01_ses-01_task-experience3_events.tsv.\n",
+      "Reading channel info from data/Main-study/sub-01/ses-01/eeg/sub-01_ses-01_task-experience3_channels.tsv.\n",
+      "Extracting parameters from data/Main-study/sub-02/ses-01/eeg/sub-02_ses-01_task-experience3_eeg.vhdr...\n",
+      "Setting channel info structure...\n",
+      "Reading events from data/Main-study/sub-02/ses-01/eeg/sub-02_ses-01_task-experience3_events.tsv.\n",
+      "Reading channel info from data/Main-study/sub-02/ses-01/eeg/sub-02_ses-01_task-experience3_channels.tsv.\n"
+     ]
+    }
+   ],
    "source": [
     "## create dataset from data of two tasks of two persons\n",
     "bids_root = Path('data/Main-study')\n",
@@ -122,23 +145,22 @@
     "for task in tasks:\n",
     "\n",
     "    # timpoints and initialize\n",
-    "    timepoints = 30001 # change this if resampling data\n",
+    "    timepoints = 300001 # change this if resampling data\n",
     "    allSubjects = np.empty((1,61, timepoints))\n",
     "\n",
     "    # Open data of a specific task for all subjects one by one, reshape and append them\n",
     "    for sub in subjects:\n",
     "        # find hypnosis-as-hypnosis trial index (only for experience)\n",
     "        if task == 'experience':\n",
-    "            ind = task_ind_finder(sub); task = task + str(ind)\n",
+    "            ind = task_ind_finder(sub)\n",
+    "            task = task + str(ind)\n",
     "        bids_path = mne_bids.BIDSPath(subject=sub, session='01', task=task, root=bids_root)\n",
     "        raw = mne_bids.read_raw_bids(bids_path, verbose=False)\n",
     "        # Cut noisy parts only for experience and baseline task\n",
     "        if task[:-1] in ['baseline', 'experience']:\n",
     "            raw = cut_noisy(raw, task,'hun')\n",
     "        \n",
-    "        # raw.resample(256)\n",
     "        # Get eeg data as np.array and add subject dimension\n",
-    "        # TODO check if getting data this way can change data's precision\n",
     "        oneSubject = np.expand_dims(raw.get_data(),0)\n",
     "\n",
     "        allSubjects = np.append(allSubjects, oneSubject, axis=0)\n",
@@ -146,34 +168,41 @@
     "    # remove empty array\n",
     "    allSubjects = np.delete(allSubjects, 0, axis=0)\n",
     "\n",
+    "    # unify task indexes across participants\n",
+    "    task = task[:-1]\n",
+    "\n",
     "    # mega data\n",
     "    allSubjectsTasks[task] = allSubjects\n",
-    "    \n",
-    "## open dataset with mne"
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# creating xarray from the dict\n",
-    "baseline = allSubjectsTasks['baseline1']\n",
-    "experience = allSubjectsTasks['experience1']\n",
+    "baseline = allSubjectsTasks['baseline']\n",
+    "experience = allSubjectsTasks['experience']\n",
     "subjects = subjects\n",
     "ch_names = raw.ch_names\n",
     "_, times = raw.get_data(return_times=True)\n",
+    "bads = [bad_channel_matcher(sub) for sub in subjects]\n",
     "\n",
     "dataset = xr.Dataset(\n",
     "    {\n",
-    "        \"baseline\": ([\"subject\", \"electrodes\", \"time\"], baseline),\n",
-    "        \"experience\": ([\"subject\", \"electrodes\", \"time\"], experience)\n",
+    "        \"baseline\": ([\"subject\", \"channel\", \"time\"], baseline),\n",
+    "        \"experience\": ([\"subject\", \"channel\", \"time\"], experience)\n",
     "    },\n",
     "    coords={\n",
     "        \"subjects\": ([\"subject\"], subjects),\n",
-    "        \"ch_names\": ([\"electrodes\"], ch_names),\n",
+    "        \"channels\": ([\"channel\"], ch_names),\n",
     "        \"times\": ([\"time\"], times)\n",
+    "    },\n",
+    "    attrs={\n",
+    "        \"bad_channels\": bads,\n",
+    "        \"sfreq\": 1000\n",
     "    }\n",
     "\n",
     ")\n",
