log the index of dropped epochs

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -114,27 +114,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = np.array([])\n",
-    "type(a) == 'numpy.ndarray'"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -338,56 +317,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(61, 300001)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "raw.get_data().shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(61, 701)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "array[2].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# channel dispersion\n",
-    "array = epoch.get_data()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -466,6 +395,121 @@
     "eog_epochs.plot_image(combine='mean')\n",
     "plt.savefig('eogevents.png')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ICA\n",
+    "\n",
+    "# TEST: run ICA\n",
+    "import mne_bids\n",
+    "from xarray_creator import _cut_noisy\n",
+    "from preprocessing import _make_montage\n",
+    "from mne.preprocessing import (ICA, create_eog_epochs, create_ecg_epochs,\n",
+    "                               corrmap)\n",
+    "# open raw data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "task = 'baseline1'\n",
+    "bids_path = mne_bids.BIDSPath(subject='02', session='01', task=task, root='data/BIDS_data')\n",
+    "raw = mne_bids.read_raw_bids(bids_path, extra_params={'preload':True})\n",
+    "raw = _cut_noisy(raw, task, 'hun')\n",
+    "raw.filter(1,30)  # filter before ICA\n",
+    "pos = _make_montage()\n",
+    "raw.set_montage(pos)\n",
+    "raw.info['bads'] = []\n",
+    "\n",
+    "# create eog evoked\n",
+    "eog_evoked = create_eog_epochs(raw).average()\n",
+    "eog_evoked.apply_baseline(baseline=(None, -0.2))\n",
+    "eog_evoked.plot_joint()\n",
+    "\n",
+    "# create ecg evoked\n",
+    "ecg_evoked = create_ecg_epochs(raw).average()\n",
+    "ecg_evoked.apply_baseline(baseline=(None, None))\n",
+    "ecg_evoked.plot_joint()\n",
+    "\n",
+    "ica = ICA(n_components=15, max_iter='auto', random_state=42)\n",
+    "ica.fit(raw)\n",
+    "\n",
+    "ica.exclude = []\n",
+    "# find which ICs match the EOG pattern\n",
+    "eog_indices, eog_scores = ica.find_bads_eog(raw, measure='zscore', threshold=2)\n",
+    "ica.exclude = eog_indices\n",
+    "\n",
+    "# find which ICs match the ECG pattern\n",
+    "ecg_indices, ecg_scores = ica.find_bads_ecg(raw, measure='correlation',\n",
+    "                                            threshold=0.6)\n",
+    "ica.exclude = ecg_indices\n",
+    "\n",
+    "# barplot of ICA component \"ECG match\" scores\n",
+    "ica.plot_scores(ecg_scores)\n",
+    "\n",
+    "# plot diagnostics\n",
+    "if ecg_indices != []:\n",
+    "    print('#####################################################')\n",
+    "    ica.plot_properties(raw, picks=ecg_indices)\n",
+    "\n",
+    "# plot ICs applied to raw data, with ECG matches highlighted\n",
+    "ica.plot_sources(raw, show_scrollbars=False)\n",
+    "\n",
+    "# plot ICs applied to the averaged ECG epochs, with ECG matches highlighted\n",
+    "ica.plot_sources(ecg_evoked)\n",
+    "\n",
+    "\n",
+    "# barplot of ICA component \"EOG match\" scores\n",
+    "ica.plot_scores(eog_scores)\n",
+    "\n",
+    "# plot diagnostics\n",
+    "if ecg_indices != []:\n",
+    "    print('#####################################################')\n",
+    "    ica.plot_properties(raw, picks=eog_indices)\n",
+    "\n",
+    "# plot ICs applied to raw data, with EOG matches highlighted\n",
+    "ica.plot_sources(raw, show_scrollbars=False)\n",
+    "\n",
+    "# plot ICs applied to the averaged EOG epochs, with EOG matches highlighted\n",
+    "ica.plot_sources(eog_evoked)\n",
+    "\n",
+    "ica.exclude = [0]  # indices chosen based on various plots above\n",
+    "# ica.apply() changes the Raw object in-place, so let's make a copy first:\n",
+    "reconst_raw = raw.copy()\n",
+    "ica.apply(reconst_raw, exclude=ica.exclude)\n",
+    "\n",
+    "raw.plot( n_channels=61,\n",
+    "         show_scrollbars=False)\n",
+    "reconst_raw.plot(n_channels=61,\n",
+    "                 show_scrollbars=False)\n",
+    "del reconst_raw\n",
+    "\n",
+    "ica.plot_overlay(raw, exclude=[0], picks='eeg')\n",
+    "\n",
+    "ica.plot_components()\n",
+    "\n",
+    "\n",
+    "# in the logger we will have\n",
+    "exclude = [0,  # blinks\n",
+    "           2  # saccades\n",
+    "           ]\n",
+    "\n",
+    "# plot ICs applied to the averaged EOG epochs, with EOG matches highlighted\n",
+    "eog_evoked = mne.preprocessing.create_eog_epochs(raw_filt).average()\n",
+    "eog_evoked.apply_baseline(baseline=(None, None))\n",
+    "eog_evoked.plot_joint()\n",
+    "ica.plot_sources(eog_evoked)\n",
+    "\n",
+    "ica.plot_components(exclude)\n",
+    "ica.exclude = exclude\n"
    ]
   }
  ],
